# optimodel

./: .gitignore  CONTRIBUTING.md  README.md
examples/: example.py  exampleGuard.py  exampleImage.py
guardServer/: README.md  pyproject.toml
guardServer/src/optimodel_guard/: cli.py  index.py
guardServer/src/optimodel_guard/Guards/: GuardBaseClass.py  LLamaPromptGuard.py  MicrosoftPresidioGuard.py  RegexGuard.py  __init__.py
sdk/: README.md  pyproject.toml
sdk/src/optimodel/: __init__.py  envVars.py
sdk/src/optimodel/Consts/: __init__.py
sdk/src/optimodel/ListModels/: ListModels.py  __init__.py
sdk/src/optimodel/QueryModel/: QueryModel.py  __init__.py  types.py
sdk/src/optimodel/Utils/: __init__.py
sdk/src/optimodel/Utils/HTTPClient/: HTTPClient.py
server/: pyproject.toml
server/src/: optimodel-server-config.json
server/src/optimodel_guard/: cli.py  index.py
server/src/optimodel_guard/Guards/: ExampleGuard.py  GuardBaseClass.py  LLamaPromptGuard.py  __init__.py
server/src/optimodel_server/: OptimodelError.py  __init__.py  cli.py  index.py  optimodel-server-config.json
server/src/optimodel_server/Config/: Config.py  __init__.py  types.py
server/src/optimodel_server/GuardClient/: __init__.py  guardClient.py  guardClientEncoder.py
server/src/optimodel_server/Planner/: Planner.py  __init__.py
server/src/optimodel_server/Providers/: AnthropicProvider.py  BaseProviderClass.py  BedrockProvider.py  CommonUtils.py  GeminiProvider.py  GroqProvider.py  MistralAIProvider.py  MistralCodestralProvider.py  OpenAIProvider.py  TogetherProvider.py  __init__.py
server/src/optimodel_server/RequestTypes/: __init__.py
server/src/optimodel_server/Routes/: __init__.py
server/src/optimodel_server/Routes/Proxy/: AnthropicProxy.py  GeminiProxy.py  OpenAIProxy.py
server/src/optimodel_server/Utils/: QueryModelMain.py
server/src/optimodel_server_types/: __init__.py  providerTypes.py
types/: pyproject.toml
types/src/optimodel_types/: __init__.py  providerTypes.py
