[build-system]
requires = ["setuptools>=61.0","setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optimodel-guard-server"
version = "0.3.8"
authors = [
  { name="Lytix", email="support@lytix.com" },
]
description = "A smart framework for calling models in the most efficient way possible"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests==2.31.0",
  "urllib3==2.2.1",
  "fastapi==0.111.0",
  "transformers==4.43.3",
  "torch==2.4.0",
  "torchvision==0.19.0",
  "accelerate==0.33.0",
  "optimodel-server==1.8.21",
  "presidio-analyzer[transformers]==2.2.355",
  "presidio-anonymizer==2.2.355",
]

[project.scripts]
optimodel-guard = "optimodel_guard.cli:main"

[project.urls]
Homepage = "https://github.com/Lytix-Labs/optimodel"
Issues = "https://github.com/Lytix-Labs/optimodel/issues"

[tool.setuptools.package-data]
jsonConfig = ["*.json"]