[build-system]
requires = ["setuptools>=61.0","setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optimodel-server"
version = "1.19.6"
authors = [
  { name="Lytix", email="support@lytix.com" },
]
description = "A smart framework for calling models in the most efficient way possible"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests==2.31.0",
  "urllib3==2.2.1",
  "fastapi==0.111.0",
  "together===1.2.1",
  "boto3==1.34.131",
  "uvicorn==0.30.1",
  "openai==1.45.0",
  "groq==0.9.0",
  "anthropic==0.31.2",
  "mistralai==1.0.2",
  "google-generativeai==0.7.2",
  "brotli==1.1.0",
  "optimodel-types==0.2.8"
]

[project.scripts]
optimodel-server = "optimodel_server.cli:main"

[project.urls]
Homepage = "https://github.com/Lytix-Labs/optimodel"
Issues = "https://github.com/Lytix-Labs/optimodel/issues"

[tool.setuptools.package-data]
jsonConfig = ["*.json"]