[build-system]
requires = ["setuptools>=61.0","setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optimodel-types"
version = "0.2.8"
authors = [
  { name="Lytix", email="support@lytix.com" },
]
description = "A smart framework for calling models in the most efficient way possible"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.scripts]

[project.urls]
Homepage = "https://github.com/Lytix-Labs/optimodel"
Issues = "https://github.com/Lytix-Labs/optimodel/issues"

[tool.setuptools.package-data]
jsonConfig = ["*.json"]